--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0"
   },
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "index.js"
-    ]
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,10 +33,16 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "!src/index.js"
+    ]
+  },
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
-    "@stryker-mutator/core": "^4.0.0",
-    "@stryker-mutator/jest-runner": "^4.0.0",
+    "@stryker-mutator/core": "^6.0.1",
+    "@stryker-mutator/javascript-mutator": "^4.0.0",
+    "@stryker-mutator/jest-runner": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
